k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskflow-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: taskflow-frontend

  template:
    metadata:
      labels:
        app: taskflow-frontend

    spec:
      containers:
        - name: frontend

          image: ghcr.io/mabedd/tasflow-frontend:latest

          ports:
            - containerPort: 8080
