k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskflow-db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: taskflow-db

  template:
    metadata:
      labels:
        app: taskflow-db

    spec:
      containers:
        - name: postgresql

          image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:13-el9

          ports:
            - containerPort: 5432
