k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: taskflow-frontend

spec:
  selector:
    app: taskflow-frontend

  ports:
    - port: 8080
      targetPort: 8080
