k8s/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: taskflow-db

spec:
  selector:
    app: taskflow-db

  ports:
    - port: 5432
      targetPort: 5432
