k8s/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: taskflow-frontend

spec:
  to:
    kind: Service
    name: taskflow-frontend

  port:
    targetPort: 8080
